deploy: 5bd84299097c49f94b1a4d31b4f907addcd0001c

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ Published Topics</h2>
 Parameters</h2>
 <ul>
 <li><a href="https://github.com/ARC-OPT/wbc_ros/blob/main/doc/parameters/whole_body_controller_parameters.md">Whole Body Controller</a></li>
-<li><a href="https://github.com/ARC-OPT/wbc_ros/blob/main/doc/parameters/cartesian_position_controller_parameters.md">Whole Body Controller</a></li>
-<li><a href="https://github.com/ARC-OPT/wbc_ros/blob/main/doc/parameters/joint_position_controller_parameters.md">Whole Body Controller</a></li>
+<li><a href="https://github.com/ARC-OPT/wbc_ros/blob/main/doc/parameters/cartesian_position_controller_parameters.md">Cartesian Position Controller</a></li>
+<li><a href="https://github.com/ARC-OPT/wbc_ros/blob/main/doc/parameters/joint_position_controller_parameters.md">Joint Position Controller</a></li>
 </ul>
 <h2><a class="anchor" id="autotoc_md4"></a>
 Requirements / Dependencies</h2>
