--- a/index.html
+++ b/index.html
@@ -88,14 +88,7 @@ Launch Tests</h3>
 </div><!-- fragment --><p> to execute all launch tests which can be found <a href="https://github.com/ARC-OPT/wbc_ros/tree/main/test">here</a>. For more verbosity, you can also execute the tests manually by typing </p><div class="fragment"><div class="line">launch_test install/wbc_ros/share/wbc_ros/test/&lt;test_name&gt;.test.py</div>
 </div><!-- fragment --><h3><a class="anchor" id="autotoc_md6"></a>
 Examples</h3>
-<p>Ensure that robot state publisher and joint state publisher are installed: </p><div class="fragment"><div class="line">sudo apt-get install ros-humble-robot-state-publisher ros-humble-joint-state-publisher -y</div>
-</div><!-- fragment --><p> For visualizing the resulting robot motion install rviz: </p><div class="fragment"><div class="line">sudo apt-get install ros-humble-rviz2</div>
-<div class="line">source install/setup.bash</div>
-</div><!-- fragment --><p> For the Cartesian space example run </p><div class="fragment"><div class="line">ros2 launch wbc_ros cartesian_space_example.launch.py</div>
-<div class="line">rviz2 -d install/wbc_ros/share/wbc_ros/config/default.rviz</div>
-</div><!-- fragment --><p> You should see the kuka iiwa robot executing a circular end effector motion in the xy-plane. For the joint space example run </p><div class="fragment"><div class="line">ros2 launch wbc_ros joint_space_example.launch.py</div>
-<div class="line">rviz2 -d install/wbc_ros/share/wbc_ros/config/default.rviz</div>
-</div><!-- fragment --><p> You can see the kuka iiwa robot executing a sinusoidal movement with the elbow joint.</p>
+<p>Check out the tutorials in the [documentation(<a href="https://arc-opt.github.io/Documentation/">https://arc-opt.github.io/Documentation/</a>).</p>
 <h2><a class="anchor" id="autotoc_md7"></a>
 Contributing</h2>
 <p>Please use the <a href="https://github.com/ARC-OPT/wbc_ros/issues">issue tracker</a> to submit bug reports and feature requests.</p>
