--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ $(function(){ initResizable(false); });
 <div class="contents">
 <div class="textblock"><p><a class="anchor" id="md_README"></a> <a href="https://github.com/ARC-OPT/wbc_ros/actions/workflows/build_and_test_ubuntu22.04.yml"><img src="https://github.com/ARC-OPT/wbc_ros/actions/workflows/build_and_test_ubuntu22.04.yml/badge.svg" alt="ROS 2 Humble" style="pointer-events: none;" class="inline"/></a> <a href="https://github.com/ARC-OPT/wbc_ros/actions/workflows/build_and_test_ubuntu24.04.yml"><img src="https://github.com/ARC-OPT/wbc_ros/actions/workflows/build_and_test_ubuntu24.04.yml/badge.svg" alt="ROS 2 Jazzy" style="pointer-events: none;" class="inline"/></a></p>
 <h1><a class="anchor" id="autotoc_md0"></a>
-wbc_ros - A ROS interface for the WBC library</h1>
+wbc_ros - A ROS 2 interface for the WBC library</h1>
 <p><a href="https://arc-opt.github.io/wbc_ros/">Code API</a> | <a href="https://arc-opt.github.io/Documentation/">Full Documentation</a></p>
 <p>This package provides a ros2 control interface for the <a href="https://github.com/ARC-OPT/wbc">Whole-Body Control library</a>.</p>
 <p>WBC was initiated and is currently developed at the <a href="http://robotik.dfki-bremen.de/en/startpage.html">Robotics Innovation Center</a> of the <a href="http://www.dfki.de">German Research Center for Artificial Intelligence (DFKI)</a> in Bremen.</p>
